<Fix: change animation element, not to break the layout>

--- a/components/header/Header.module.scss
+++ b/components/header/Header.module.scss
@@ -28,11 +28,14 @@
         @include animationDisabled;
       }
       div {
+        width: 100%;
         &:nth-child(1) {
           animation-name: moveInLeft1;
           animation-duration: 1s;
           animation-timing-function: ease-out;
           margin-left: -4.8rem;
+          display: block;
+          will-change: transform, opacity;
 
           &::before {
             content: "< h1 >";
@@ -44,11 +47,15 @@
           animation-name: moveInRight;
           animation-duration: 1s;
           animation-timing-function: ease-out;
+          display: block;
+          will-change: transform, opacity;
         }
         &:nth-child(3) {
           animation-name: moveInLeft3;
           animation-duration: 1s;
           animation-timing-function: ease-out;
+          display: block;
+          will-change: transform, opacity;
         }
 
         @include respond(phone) {
@@ -228,10 +235,10 @@
 @keyframes moveInLeft1 {
   0% {
     opacity: 0;
-    transform: translateX(-20rem);
+    transform: translateX(-10%);
   }
   60% {
-    transform: translateX(1rem);
+    transform: translateX(2%);
   }
   100% {
     opacity: 1;
@@ -241,11 +248,10 @@
 // h1 second element
 @keyframes moveInRight {
   0% {
-    opacity: 0;
-    transform: translateX(10rem);
+    transform: translateX(10%);
   }
   80% {
-    transform: translateX(-1rem);
+    transform: translateX(-2%);
   }
   100% {
     opacity: 1;
@@ -256,10 +262,10 @@
 @keyframes moveInLeft3 {
   0% {
     opacity: 0;
-    transform: translateX(-40rem);
+    transform: translateX(-25%);
   }
   80% {
-    transform: translateX(1rem);
+    transform: translateX(2%);
   }
   100% {
     opacity: 1;
